Fixed the errors, tested all the routes except studentRequest and meetings
