# backend/src/modules/meetings/meeting.controller.ts
@@ -1,13 +1,14 @@
 import { Request, Response, NextFunction } from "express";
 import { MeetingService } from "./meeting.service";
-import { HttpStatusText } from "../../types/HTTPStatusText";
+import { HTTPStatusText } from "../../types/HTTPStatusText";
+import { SuccessMessages } from "../../types/successMessages";
 
 export default class MeetingController {
   static async getAllUser(req: Request, res: Response, next: NextFunction) {
     try {
       const userId = res.locals.user.id;
       const meetings = await MeetingService.getUserMeetings(userId);
-      res.json({ status: HttpStatusText.SUCCESS, data: meetings });
+      res.json({ status: HTTPStatusText.SUCCESS, data: meetings });
     } catch (err: any) {
       next(err);
     }
@@ -16,7 +17,7 @@ export default class MeetingController {
   static async getOne(req: Request, res: Response, next: NextFunction) {
     try {
       const meeting = await MeetingService.getById(req.params.id);
-      res.json({ status: HttpStatusText.SUCCESS, data: meeting });
+      res.json({ status: HTTPStatusText.SUCCESS, data: meeting });
     } catch (err: any) {
       next(err);
     }
@@ -25,7 +26,7 @@ export default class MeetingController {
   static async create(req: Request, res: Response, next: NextFunction) {
     try {
       const result = await MeetingService.create(res.locals.user.id, req.body);
-      res.status(201).json({ status: HttpStatusText.SUCCESS, data: result });
+      res.status(201).json({ status: HTTPStatusText.SUCCESS, data: result });
     } catch (err: any) {
       next(err);
     }
@@ -33,12 +34,8 @@ export default class MeetingController {
 
   static async update(req: Request, res: Response, next: NextFunction) {
     try {
-      const meeting = await MeetingService.update(
-        res.locals.user.id,
-        req.params.id,
-        req.body,
-      );
-      res.json({ status: HttpStatusText.SUCCESS, data: meeting });
+      const meeting = await MeetingService.update(res.locals.user.id, req.params.id, req.body);
+      res.json({ status: HTTPStatusText.SUCCESS, data: meeting });
     } catch (err: any) {
       next(err);
     }
@@ -48,8 +45,8 @@ export default class MeetingController {
     try {
       await MeetingService.delete(res.locals.user.id, req.params.id);
       res.json({
-        status: HttpStatusText.SUCCESS,
-        message: "Deleted successfully",
+        status: HTTPStatusText.SUCCESS,
+        message: SuccessMessages.DELETED_MEETING,
       });
     } catch (err: any) {
       next(err);
@@ -62,7 +59,7 @@ export default class MeetingController {
       const { meetingId } = req.params;
 
       const result = await MeetingService.joinMeeting(userId, meetingId);
-      res.json({ status: HttpStatusText.SUCCESS, data: result });
+      res.json({ status: HTTPStatusText.SUCCESS, data: result });
     } catch (err) {
       next(err);
     }
@@ -74,7 +71,7 @@ export default class MeetingController {
       const { meetingId } = req.params;
 
       const result = await MeetingService.leaveMeeting(userId, meetingId);
-      res.json({ status: HttpStatusText.SUCCESS, data: result });
+      res.json({ status: HTTPStatusText.SUCCESS, data: result });
     } catch (err) {
       next(err);
     }
@@ -86,12 +83,8 @@ export default class MeetingController {
       const { meetingId } = req.params;
       const { userId } = req.body;
 
-      const result = await MeetingService.addParticipant(
-        hostId,
-        meetingId,
-        userId,
-      );
-      res.json({ status: HttpStatusText.SUCCESS, data: result });
+      const result = await MeetingService.addParticipant(hostId, meetingId, userId);
+      res.json({ status: HTTPStatusText.SUCCESS, data: result });
     } catch (err) {
       next(err);
     }
@@ -102,12 +95,8 @@ export default class MeetingController {
       const hostId = res.locals.user.id;
       const { meetingId, userId } = req.params;
 
-      const result = await MeetingService.removeParticipant(
-        hostId,
-        meetingId,
-        userId,
-      );
-      res.json({ status: HttpStatusText.SUCCESS, data: result });
+      const result = await MeetingService.removeParticipant(hostId, meetingId, userId);
+      res.json({ status: HTTPStatusText.SUCCESS, data: result });
     } catch (err) {
       next(err);
     }
@@ -118,7 +107,7 @@ export default class MeetingController {
       const userId = res.locals.user.id;
       const meetingId = req.params.meetingId;
       const meeting = await MeetingService.startMeeting(userId, meetingId);
-      res.json({ status: HttpStatusText.SUCCESS, meeting });
+      res.json({ status: HTTPStatusText.SUCCESS, meeting });
     } catch (err) {
       next(err);
     }
@@ -129,7 +118,7 @@ export default class MeetingController {
       const userId = res.locals.user.id;
       const meetingId = req.params.meetingId;
       await MeetingService.checkHost(userId, meetingId);
-      res.json({ status: HttpStatusText.SUCCESS, isHost: true });
+      res.json({ status: HTTPStatusText.SUCCESS, isHost: true });
     } catch (err) {
       next(err);
     }
